# window-capture-reading

./: .env.example  .flake8  .gitignore  CLAUDE.md  LICENSE  LICENSES.md  README.md  WindowCaptureReading.spec  build_exe.ps1  codecov.yml  config.ini  config.json  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.cursor/rules/: agent-requested-ci-cd.mdc  agent-requested-code-quality-tools.mdc  agent-requested-dependency-management.mdc  agent-requested-documentation-standards.mdc  always-coding-standards.mdc  always-error-handling-logging.mdc  always-mcp-server-info.mdc  always-powershell-commands.mdc  always-project-structure.mdc  autoattached-testing-standards.mdc
.github/actions/check-permissions/: action.yml
.github/workflows/: check-licenses.yml  ci-cd.yml  code-quality.yml  create-and-release.yml  create-release-tag.yml  release-exe.yml  tests.yml
docs/: bouyomi_setup.md  environment_setup.md  exe_build.md  gui_usage.md  license_compliance.md  setup_guide.md  tesseract_setup.md  update_history.md
scripts/: check_licenses.py  pre_release_check.py
src/: gui_main.py  gui_psg_main.py  main.py  resource_path.py  types.py  version.py
src/gui/: __init__.py  diff_canvas.py  main_window.py  preview_canvas.py  settings_dialog.py  utils.py
src/services/: bouyomi_client.py  difference_detector.py  logger.py  memory_watcher.py  message_detector.py  ocr_service.py  window_capture.py
src/utils/: config.py  logging_config.py  message_log.py  messages.py  performance.py  resource_path.py
tests/services/: test_bouyomi_client.py  test_difference_detector.py  test_message_detector.py  test_ocr_service.py  test_window_capture.py
tests/utils/: __init__.py  test_config.py  test_logging_config.py  test_resource_path.py
