[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "window-capture-reading"
version = "0.1.0"
description = "ウィンドウキャプチャとテキスト読み取りを行うアプリケーション"
authors = [
    {name = "suittizihou"}
]
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = [
    "."
]
testpaths = [
    "tests"
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 